# nitorch

./: .gitattributes  .gitignore  .readthedocs.yml  Dockerfile  LICENSE  MANIFEST.in  README.md  buildtools.py  nitorch.toml  pyproject.toml  setup.cfg  setup.py  setup_buildtools.py  setup_cext.py  setup_compiler.py  setup_config.py  setup_cuda.py  setup_system.py  setup_torch.py  setup_utils.py
.github/workflows/: build.yml  manual-build.yml  test.yml  test_pushpull_C.yml  test_pushpull_TS.yml
conda/: nitorch-demo.yml  nitorch.yml
demo/: assert_register_hippocampus.py  assert_register_hippocampus_api.py  assert_register_hippocampus_cli.py  demo_affine_reg.ipynb  demo_helpers.py  demo_mni_align.ipynb  demo_register.ipynb  demo_register_hippocampus.ipynb  demo_register_oasis_slicer.py  demo_spatial.ipynb  demo_yb_register_oasis.ipynb
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/_static/: theme_overrides.css
docs/source/: conf.py  getting_started.rst  index.rst  modules.rst  nitorch.cli.denoise.rst  nitorch.cli.misc.chunk.rst  nitorch.cli.misc.convert.rst  nitorch.cli.misc.crop.rst  nitorch.cli.misc.extract_patches.rst  nitorch.cli.misc.info.rst  nitorch.cli.misc.inpaint.rst  nitorch.cli.misc.pad.rst  nitorch.cli.misc.pool.rst  nitorch.cli.misc.rst  nitorch.cli.misc.unstack.rst  nitorch.cli.qmri.estatics.rst  nitorch.cli.qmri.greeq.rst  nitorch.cli.qmri.rst  nitorch.cli.registration.autoreg.rst  nitorch.cli.registration.compose.rst  nitorch.cli.registration.orient.rst  nitorch.cli.registration.register.rst  nitorch.cli.registration.reorient.rst  nitorch.cli.registration.resize.rst  nitorch.cli.registration.reslice.rst  nitorch.cli.registration.rst  nitorch.cli.registration.vexp.rst  nitorch.cli.rst  nitorch.cli.viewer.rst  nitorch.core.rst  nitorch.io.rst  nitorch.io.tests.rst  nitorch.io.transforms.freesurfer.rst  nitorch.io.transforms.rst  nitorch.io.utils.rst  nitorch.io.volumes.babel.rst  nitorch.io.volumes.rst  nitorch.io.volumes.tiff.rst  nitorch.mesh.rst  nitorch.nn.activations.rst  (+26 more)
nitorch/: __init__.py  _version.py  kernels.py  mathfun.py  mixtures.py  optim.py  preproc.py  pyproject.toml  spatial.py  spm.py  utils.py
nitorch/C/: bounds.h  include_first.h  interpolation.h  pushpull.cpp  pushpull.h  spatial.cpp
nitorch/_C/: __init__.py  allocator.h  bounds.h  bounds_common.h  common.h  conv.cpp  conv.h  conv_common.cpp  conv_common.h  grid.py  include_first.h  interpolation.h  interpolation_common.h  pushpull.cpp  pushpull.h  pushpull_common.cpp  pushpull_common.h  resize.py  schur_common.cpp  solve.py  spatial.cpp  utils.py  wip_regularisers_common.cpp
nitorch/cli/: __init__.py  cli.py
nitorch/core/: __init__.py  _hist.py  _linalg_expm.py  _linalg_logm.py  _linalg_qr.py  _linalg_schur.py  _linalg_sym.py  bounds.py  cli.py  constants.py  datasets.py  dtypes.py  fft.py  itertools.py  jit.py  kernels.py  linalg.py  math.py  optim.py  optionals.py  options.py  py.py  pyutils.py  struct.py  utils.py  version.py
nitorch/io/: __init__.py  _babel_metadata.py  _babel_utils.py  babel.py  dtype.py  file.py  indexing.py  loadsave.py  mappedfile.py  mapping.py  metadata.py  nputils.py  optionals.py  readers.py  volutils.py  writers.py
nitorch/mesh/: __init__.py  _inclusion.py  _mbf.py  _svg_allen.py
nitorch/nn/: __init__.py  _cnn.py  _conv.py  _spatial.py  base.py  check.py  experimental.py
nitorch/oct/: preproc.py
nitorch/plot/: __init__.py  colormaps.py  gui.py  menu.py  vb.py  volumes.py
nitorch/proba/: __init__.py  algebra.py  dag.py  dirac.py  gamma.py  normal.py  transforms.py  utils.py  variables.py
nitorch/spatial/: __init__.py  _affine.py  _affine_optimal.py  _conv.py  _curves.py  _deprecated.py  _distances.py  _finite_differences.py  _grid.py  _grid_inv.py  _layout.py  _morpho.py  _mrfield.py  _regularisers.py  _sclsq.py  _shoot.py  _solvers.py  _spconv.py  _svf.py  _svf1d.py  _svf_optimal.py
nitorch/tests/: test_diff_div.py  test_fft.py  test_gradcheck_spatial.py  test_pushpull.py  test_spatial.py
nitorch/tools/: __init__.py  _preproc_fov.py  _preproc_img.py  _preproc_utils.py  _spm.py  affine_reg.py  cli.py  (+3 more)
scripts/: optinorm.bash
(+573 files in other folders)
