[metadata]
name = nitorch
author = Yael Balbastre <yael.balbastre@gmail.com>, Mikael Brudfors <brudfors@gmail.com>
author_email = yael.balbastre@gmail.com
description = NeuroImaging in PyTorch
long_description = file:README.md
platforms = OS Independent
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Medical Science Apps.
project_urls =
    Source Code=https://github.com/balbasty/nitorch

[options]
python_requires = >= 3.6
# we should be able to make all numpy/scipy dependencies optional
install_requires =
    torch >= 1.3
    numpy
    scipy

[options.entry_points]
console_scripts =
    nitorch = nitorch.cli:cli

[options.extras_require]
all =
    numpy
    nibabel
    tiffile
    wget
    appdirs
    matplotlib
io =
    numpy
    nibabel
    tifffile
data =
    wget
    appdirs
plot =
    matplotlib
numpy =
    numpy
nibabel =
    numpy
    nibabel
tiff =
    numpy
    tifffile

[versioneer]
VCS = git
style = pep440
versionfile_source = nitorch/_version.py
versionfile_build = nitorch/_version.py
tag_prefix =
parentdir_prefix =
